Install crispy_bootstrap5

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ gunicorn = "*"
 psycopg2-binary = "*"
 django-allauth = "*"
 django-crispy-forms = "*"
+crispy-bootstrap5 = "*"
 
 [dev-packages]
 
