Add excursions model and add ckeditor

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ psycopg2-binary = "*"
 django-allauth = "*"
 django-crispy-forms = "*"
 crispy-bootstrap5 = "*"
+install = "*"
+django-ckeditor = "*"
+pillow = "*"
 
 [dev-packages]
 
