--- a/Pipfile
+++ b/Pipfile
@@ -5,14 +5,14 @@ name = "pypi"
 
 [packages]
 django = "==4.1"
-environs = "*"
-dj-database-url = "*"
-whitenoise = "*"
-gunicorn = "*"
-psycopg2-binary = "*"
-django-allauth = "*"
-django-crispy-forms = "*"
-crispy-bootstrap5 = "*"
+environs = "==9.5.0"
+dj-database-url = "==1.0.0"
+whitenoise = "==6.2.0"
+gunicorn = "==20.1.0"
+psycopg2-binary = "==2.9.3"
+django-allauth = "==0.51.0"
+django-crispy-forms = "==1.14.0"
+crispy-bootstrap5 = "==0.6"
 install = "*"
 django-ckeditor = "*"
 pillow = "*"
@@ -21,6 +21,24 @@ boto3 = "*"
 stripe = "*"
 coverage = "*"
 qrcode = "*"
+asgiref = "==3.5.2"
+certifi = "==2022.6.15"
+cffi = "==1.15.1"
+charset-normalizer = "==2.1.1"
+cryptography = "==37.0.4"
+defusedxml = "==0.7.1"
+idna = "==3.3"
+marshmallow = "==3.17.1"
+oauthlib = "==3.2.0"
+pycparser = "==2.21"
+pyjwt = "==2.4.0"
+pyparsing = "==3.0.9"
+python-dotenv = "==0.20.0"
+python3-openid = "==3.2.0"
+requests = "==2.28.1"
+requests-oauthlib = "==1.3.1"
+sqlparse = "==0.4.2"
+urllib3 = "==1.26.12"
 
 [dev-packages]
 
