--- a/Pipfile
+++ b/Pipfile
@@ -13,14 +13,14 @@ psycopg2-binary = "==2.9.3"
 django-allauth = "==0.51.0"
 django-crispy-forms = "==1.14.0"
 crispy-bootstrap5 = "==0.6"
-install = "*"
-django-ckeditor = "*"
-pillow = "*"
-django-storages = "*"
-boto3 = "*"
-stripe = "*"
-coverage = "*"
-qrcode = "*"
+install = "==1.3.5"
+django-ckeditor = "==6.7.0"
+pillow = "==10.1.0"
+django-storages = "==1.14.2"
+boto3 = "==1.28.67"
+stripe = "==7.0.0"
+coverage = "==7.3.2"
+qrcode = "==7.4.2"
 asgiref = "==3.5.2"
 certifi = "==2022.6.15"
 cffi = "==1.15.1"
@@ -39,6 +39,24 @@ requests = "==2.28.1"
 requests-oauthlib = "==1.3.1"
 sqlparse = "==0.4.2"
 urllib3 = "==1.26.12"
+botocore = "==1.31.67"
+django-cors-headers = "==4.2.0"
+django-js-asset = "==2.1.0"
+django-user-agents = "==0.4.0"
+djangorestframework = "==3.14.0"
+jmespath = "==1.0.1"
+pexpect = "==4.8.0"
+ptyprocess = "==0.7.0"
+pypng = "==0.20220715.0"
+python-dateutil = "==2.8.2"
+pytz = "==2023.3.post1"
+s3transfer = "==0.7.0"
+six = "==1.16.0"
+strip = "==0.0.1.dev14"
+types-cryptography = "==3.3.23"
+typing-extensions = "==4.8.0"
+ua-parser = "==0.18.0"
+user-agents = "==2.2.0"
 
 [dev-packages]
 
