--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,6 @@ psycopg2-binary = "==2.9.3"
 django-allauth = "==0.51.0"
 django-crispy-forms = "==1.14.0"
 crispy-bootstrap5 = "==0.6"
-install = "==1.3.5"
 django-ckeditor = "==6.7.0"
 pillow = "==10.1.0"
 django-storages = "==1.14.2"
@@ -60,6 +59,7 @@ user-agents = "==2.2.0"
 selenium = "==3.141.0"
 openai = "*"
 django-google-translate = "*"
+django-compressor = "*"
 
 [dev-packages]
 
