Save untracked changes before Grit migration

--- a/Pipfile
+++ b/Pipfile
@@ -60,6 +60,10 @@ selenium = "==3.141.0"
 openai = "*"
 django-google-translate = "*"
 django-compressor = "*"
+django-celery-beat = "*"
+schedule = "*"
+redis = "*"
+celery = {extras = ["redis"], version = "*"}
 
 [dev-packages]
 
